--- a/src/scanning/scanningSession/Thumbnail/Thumbnail.scss
+++ b/src/scanning/scanningSession/Thumbnail/Thumbnail.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: fit-content;
 
   .thumbnail-name {
     font-size: 0.6rem;
